# type_utils

./: CMakeLists.txt  README.md  example.cpp  type_utils.hpp
include/impl/: concepts.hpp  functions.hpp  helpers.hpp  info.hpp  members.hpp  pack.hpp  qualifiers.hpp  string_literal.hpp  struct.hpp  switch.hpp  tuple.hpp  type_traits.hpp
include/kaixo/: type_utils.hpp
include/kaixo/impl/: concepts.hpp  functions.hpp  helpers.hpp  info.hpp  members.hpp  pack.hpp  qualifiers.hpp  sequence.hpp  string_literal.hpp  struct.hpp  switch.hpp  tuple.hpp  type_filter.hpp  type_traits.hpp  value_filter.hpp
tests/: concepts_tests.hpp  functions_tests.hpp  helpers_tests.hpp  info_tests.hpp  members_tests.hpp  pack_tests.hpp  qualifiers_tests.hpp  sequence_tests.hpp  string_literal_tests.hpp  struct_tests.hpp  switch_tests.hpp  tests.cpp  tuple_tests.hpp  type_filter_tests.hpp  type_traits_tests.hpp
